add pagination for history
